fixed a missing borders-radius of index.heading for tablet

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -578,11 +578,13 @@ body {
     padding-top: 2.5rem; }
   .heading__desc {
     padding-bottom: 1.5rem; }
+  @media all and (min-width: 600px) {
+    .heading {
+      border-radius: 2rem; } }
   @media all and (min-width: 900px) {
     .heading {
       width: 350px;
       display: inline-block;
-      border-radius: 2rem;
       margin: 2rem auto auto auto; } }
 
 .howto ul {
